# ShotAttemptDetection

./: .gitignore  README.md  pyproject.toml
src/: detect_shots.py  evaluate.py  exploratory_data_analysis.py  fake_groundtruth.py  fake_results.py  features.py  preprocess.py
