[project]
name = "shot-attempt-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Vieira",email = "pedrovieira@arrowplan.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
