[tool.poetry]
name = "shot-attempt-detection"
version = "0.1.0"
description = ""
authors = ["Pedro Vieira <pedrovieira@arrowplan.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.0.0"
matplotlib = ">=3.6.0"
seaborn = ">=0.12.0"
numpy = ">=1.24.0"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
