[tool.poetry]
name = "shot-attempt-detection"
version = "0.1.0"
description = ""
authors = ["Pedro Vieira <pedrovieira@arrowplan.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.0.0"
matplotlib = ">=3.6.0"
seaborn = ">=0.12.0"
numpy = ">=1.24.0"
typer = ">=0.9.0"
scipy = "^1.16.2"
scikit-learn = ">=1.3.0"
joblib = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[tool.poetry.scripts]
eda = "src.exploratory_data_analysis:app"
fake-results = "src.fake_results:app"
features = "src.features:app"
detect-shots = "src.detect_shots:app"
evaluate = "src.evaluate:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
